jpa 데이터 조회 공통 로직 추가